full pass over main text, except empirical section and caption of fig 1.

--- a/test_accuracy_paper/dnns.bib
+++ b/test_accuracy_paper/dnns.bib
@@ -1644,6 +1644,13 @@
   pages =        {},
 }
 
+@TECHREPORT{GSdx18_TR,
+  author =    {M. Geiger and S. Spigler and S. d'Ascoli and L. Sagun and M. Baity-Jesi and G. Biroli and M. Wyart},
+  title =     {The jamming transition as a paradigm to understand the loss landscape of deep neural networks},
+  number =    {Preprint: arXiv:1809.09349},
+  year =      {2018},
+}
+
 @article{GY91,
   author =       {A. Georges and J. S. Yedidia},
   title =        {How to expand around mean-field theory using high-temperature expansions},
@@ -3465,6 +3472,13 @@
   year =      {2017},
 }
 
+@TECHREPORT{PSG18_TR,
+  author =    {J. Pennington and S. S. Schoenholz and S. Ganguli},
+  title =     {The Emergence of Spectral Universality in Deep Networks},
+  number =    {Preprint: arXiv:1802.09979},
+  year =      {2018},
+}
+
 @INPROCEEDINGS{PM11,
   author =       {P. O. Perry and M. W. Mahoney},
   title =        {Regularized {L}aplacian Estimation and Fast Eigenvector Approximation},
@@ -4117,6 +4131,13 @@
   volume =       {105},
   number =       {2–3},
   pages =        {411--420},
+}
+
+@TECHREPORT{SGd18_TR,
+  author =    {S. Spigler and M. Geiger and S. d'Ascoli and L. Sagun and G. Biroli and M. Wyart},
+  title =     {A jamming transition from under- to over-parametrization affects loss landscape and generalization},
+  number =    {Preprint: arXiv:1810.09665},
+  year =      {2018},
 }
 
 @ARTICLE{SHKx14,
